# PROG-5

./: README.md
Lab-1/: README.md  activation_script.py
Lab-1/mymodule_server/: my_module.py
Lab-2/: get-api.py
Lab-3/: Fib_checker.py  README.md
Lab-3/tests/: test_gen_fib.py
Lab-4/: Fib_checker.py  gen_fib.py
Lab-4/tests/: test_fib_checker.py
Lab-5/: Currencies.py  README.md
Lab-6/: Currencies.py  Decorator_currencies.py  README.md
Lab-6/csv/: mycsvfile.csv
Lab-7/: Observer.py  README.md  main.py
Lab-7/app/: app.py
Lab-9/: .gitignore  __init__.py  main.py  pyproject.toml
Lab-9/App/: app.py
Lab-9/Auth/: Access_token.py
Lab-9/Users/: Models.py  users_db.py
Lab-9/tests/: test_app.py
